# cpp_core_utils

./: build.sh  meson.build
include/core/: jack.hpp  logger.hpp  midi_types.hpp  utils.hpp
src/: jack.cpp  logger.cpp
tests/: test_logger.cpp
